--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
 /* Heading Styles */
+
+body {
+  margin: 0%;
+  padding: 0%;
+  font-family: "Roboto", sans-serif system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  line-height: 1.6;
+}
 .headcart {
   font-size: 28px;
   font-weight: bold;
@@ -63,7 +72,7 @@
 }
 
 .RemoveButtton {
-  background-color: #dc3545; /* Bootstrap red color, you can change it */
+  background-color: #dc3545;
   color: #fff;
   width: 200px;
   height: 60px;
@@ -72,12 +81,26 @@
 .buy button {
   background-color: #28a745;
   color: #fff;
+  float: right;
+  margin-top: -70px;
 }
-
+.CartConatiner1 {
+  border: 2px solid black;
+  width: 80%;
+  margin-left: 10%;
+}
 .total {
   margin-top: 20px;
 }
-
+.LearingforFuture {
+  text-align: center;
+  font-size: 32px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.CartPrice {
+  position: relative;
+  top: 100px;
+}
 /* Responsive Styles */
 @media only screen and (max-width: 600px) {
   .headOfcart,
