--- a/src/CssComponent/Home.css
+++ b/src/CssComponent/Home.css
@@ -3,7 +3,45 @@ body {
   margin: 0;
   padding: 0;
 }
-* {
+.coursetext {
+  margin-left: 10%;
+}
+.userCreditals {
+  display: flex;
+}
+.HiiOne {
+  width: 15vw;
+  text-align: center;
+  height: auto;
+  position: relative;
+}
+.UserDescription {
+  position: absolute;
+  top: 56px;
+  right: -60px;
+  width: 150px;
+  display: none;
+  background-color: grey;
+  border-radius: 6px;
+}
+.outlineDescription {
+  position: absolute;
+  height: 80px;
+  width: 60px;
+  top: 0;
+  left: 80px;
+}
+.HiiOne:hover .UserDescription {
+  display: block;
+}
+.UserLogo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: auto;
+  background-color: #2d2f31;
+  color: white;
+  padding: 5px;
 }
 .HomeConatainer {
   width: 100%;
@@ -99,6 +137,9 @@ body {
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 10px;
 }
 .ConatinerForCourse {
   width: 80%;
@@ -113,9 +154,9 @@ body {
   background-color: aqua;
 }
 .commentContainer {
-  margin-top: 50px;
+  margin-top: 30px;
   width: 80%;
-  height: 50vh;
+  height: 65vh;
   border: 2px solid black;
   color: #f7f9fa;
   margin-left: 10%;
@@ -158,6 +199,7 @@ body {
 .LearningHead {
   font-size: 30px;
   color: black;
+  margin-left: 10%;
 }
 p {
   color: #5624d0;
@@ -199,7 +241,7 @@ p {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 80%;
-  height: 50vh;
+  height: 56vh;
   margin-left: 10%;
 }
 .LearningmainConatiner {
@@ -207,7 +249,7 @@ p {
   justify-content: space-evenly;
 }
 .Explore {
-  margin-top: 10px;
+  margin-top: 30px;
   margin-left: 10%;
   font-size: 24px;
 }
@@ -215,7 +257,7 @@ p {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 80%;
-  height: 60vh;
+  height: 75vh;
   margin-left: 10%;
 }
 .Multiplebutton {
@@ -251,6 +293,8 @@ p {
   border-radius: 20px;
 }
 .firstoneadvertisment2 {
+  margin-top: 74px;
+  margin-left: 50px;
   width: 30vw;
   height: 60vh;
   border-radius: 10px;
@@ -300,6 +344,8 @@ p {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  width: 80%;
+  margin-left: 10%;
 }
 .TeacherText {
   margin-top: 80px;
@@ -405,6 +451,11 @@ p {
 
 /**********************************MediaQuer**********************************************/
 @media screen and (max-width: 800px) {
+  * {
+    margin: auto;
+    box-sizing: border-box;
+    overflow-x: hidden;
+  }
   .Advertimsement {
     width: 100%;
   }
@@ -433,6 +484,7 @@ p {
     padding: 10px;
     text-align: center;
     position: relative;
+    height: auto;
   }
   .commentContainer {
     margin-top: 10px;
@@ -447,7 +499,6 @@ p {
     display: none;
   }
   .LearningContainer {
-    width: 100%;
     height: 100%;
     margin: auto;
   }
@@ -467,8 +518,12 @@ p {
     max-width: 100%;
     max-height: 50%;
   }
+  .Explore {
+    margin-left: 30%;
+  }
   .first {
-    width: 400px;
+    width: 300px;
+    height: 200px;
   }
   .Featuredcategory {
     width: 100%;
@@ -508,9 +563,6 @@ p {
   .textforBusiness {
     font-size: 12px;
   }
-  .TeacherConatiner {
-    width: 100%;
-  }
   .TeacherText {
     width: 100%;
     height: 100%;
@@ -528,7 +580,7 @@ p {
     height: 50px;
   }
   .Teaching {
-    margin-left: 100px;
+    margin-left: 35px;
   }
   .instructorforTeacher {
     text-align: center;
@@ -539,6 +591,10 @@ p {
   .Teacherimg {
     display: none;
   }
+  .BecomeA {
+    width: 100%;
+    font-size: 27px;
+  }
   .Tech {
     flex-direction: column;
   }
@@ -546,7 +602,7 @@ p {
     width: 100%;
   }
   .phototech {
-    width: 100%;
+    width: 50%;
   }
   .AdvertimsementImg2 {
     height: 300px;
@@ -558,9 +614,6 @@ p {
     display: none;
   }
   .BeginNow {
-    /* flex-direction: column;
-    height: 25vh;
-    align-items: center; */
     display: none;
   }
   .MainBegin {
