--- a/src/MultipleComponent/Multiple.css
+++ b/src/MultipleComponent/Multiple.css
@@ -1,3 +1,6 @@
+.check {
+  border: 3px solid black;
+}
 .navbar1 {
   background-color: #fff;
   border-bottom: 1px solid #eee;
@@ -11,7 +14,7 @@
   margin-right: auto;
 }
 h1 {
-  margin-left: 15px;
+  margin-left: 10px;
 }
 h2 {
   margin-left: 10px;
@@ -36,6 +39,12 @@ h2 {
   justify-content: space-evenly;
   margin-top: 20px;
 }
+.MainContainer1 {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  gap: 10px;
+}
 .featuresImage {
   width: 500px;
   height: 250px;
@@ -45,7 +54,7 @@ h2 {
   border: 1px solid #ddd;
   padding: 20px;
   width: 240px;
-  height: 300px;
+  height: 350px;
   padding: 10px;
   text-align: center;
   position: relative;
@@ -64,8 +73,8 @@ h2 {
   transition: background-color 0.3s;
   display: none;
   position: absolute;
-  bottom: 10px;
-  left: 43%;
+  bottom: 20px;
+  left: 63%;
   transform: translateX(-50%);
 }
 
@@ -132,14 +141,18 @@ h2 {
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 20px;
-    width: 100%;
-    height: 300px;
+    width: 300px;
+    min-height: 250px;
+    min-height: 220px;
     padding: 10px;
+    margin: auto;
     text-align: center;
     position: relative;
   }
+  .MainContainer {
+    gap: 15px;
+  }
   .MainImage {
-    width: 100%;
     height: 175px;
   }
   .navbar1 {
@@ -175,5 +188,13 @@ h2 {
   .Bestseller {
     text-align: center;
     margin-left: 100px;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 1100px) {
+  .leftRatingDiv {
+    display: none;
+  }
+  .Instructor {
+    gap: 5px;
   }
 }
