--- a/src/MultipleComponent/Multiple.css
+++ b/src/MultipleComponent/Multiple.css
@@ -74,7 +74,7 @@ h2 {
   display: none;
   position: absolute;
   bottom: 20px;
-  left: 63%;
+  left: 50%;
   transform: translateX(-50%);
 }
 
@@ -137,6 +137,12 @@ h2 {
   display: block;
 }
 @media screen and (max-width: 620px) {
+  .MainContainer1 {
+    flex-direction: column;
+  }
+  .h1 {
+    margin-left: 60px;
+  }
   .child_container {
     background-color: #fff;
     border: 1px solid #ddd;
