--- a/src/CssComponent/Home.css
+++ b/src/CssComponent/Home.css
@@ -452,7 +452,7 @@ p {
 
 /**********************************MediaQuer**********************************************/
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
   * {
     margin: auto;
     box-sizing: border-box;
@@ -646,5 +646,11 @@ p {
   }
   .leftimagefortechudemy {
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 1100px) {
+  .child_container {
+    width: 350px;
   }
 }
