--- a/src/MultipleComponent/Multiple.css
+++ b/src/MultipleComponent/Multiple.css
@@ -122,9 +122,10 @@ h2 {
 }
 .Bestseller {
   border: 1px solid black;
-  width: 100px;
+  width: 200px;
   margin: 10px;
   padding: 10px;
+  margin-right: -100px;
   background-color: yellow;
   font-weight: 500;
 }
@@ -144,6 +145,12 @@ h2 {
   .h1 {
     margin-left: 60px;
   }
+  .CartPrice {
+    top: 0px;
+  }
+  .childCartConatiner {
+    height: 100%;
+  }
   .child_container {
     background-color: #fff;
     border: 1px solid #ddd;
@@ -156,11 +163,69 @@ h2 {
     text-align: center;
     position: relative;
   }
+  .nameofItem {
+    font-size: 30px;
+    font-weight: 400px;
+    text-align: center;
+  }
+  .nameofType {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 400px;
+  }
+  .nameofDescription {
+    font-size: 25px;
+    text-align: center;
+  }
+  .carddescription {
+    font-size: 24px;
+    text-align: center;
+  }
+  .nameOfType {
+    font-size: 24px;
+    text-align: center;
+  }
+  .Price-of-All {
+    font-size: 25px;
+    text-align: center;
+  }
+  .singleRating {
+    font-size: 25px;
+    text-align: center;
+  }
+  .singlePrice {
+    font-size: 22px;
+    text-align: center;
+  }
+  .nameofItem1 {
+    font-size: 38px;
+    text-align: center;
+  }
+  .featureCourse {
+    text-align: center;
+  }
+  .nameOfDescription {
+    font-size: 22px;
+    font-weight: 400px;
+  }
+  .course {
+    font-size: 22px;
+  }
+  .subject {
+    font-size: 25px;
+  }
+  .LaptopmodelName {
+    font-size: 25px;
+  }
+  .nameofRatingandStar {
+    font-size: 25px;
+  }
   .MainContainer {
     gap: 15px;
   }
   .MainImage {
     height: 175px;
+    width: 100%;
   }
   .navbar1 {
     display: none;
@@ -194,12 +259,26 @@ h2 {
   }
   .Bestseller {
     text-align: center;
-    margin-left: 100px;
+    margin-left: 80px;
   }
 }
-@media screen and (min-width: 700px) and (max-width: 1100px) {
+@media screen and (min-width: 700px) and (max-width: 1000px) {
   body {
     overflow-x: hidden;
+  }
+  .child_container {
+    height: 450px;
+  }
+  .nameofDescription {
+    font-size: 36px;
+    text-align: center;
+  }
+  .MainImage {
+    width: 100%;
+  }
+  .nameofType {
+    font-size: 32px;
+    text-align: center;
   }
   .MainContainer {
     gap: 30px;
@@ -212,7 +291,7 @@ h2 {
   }
   .singleCard {
     flex-direction: column;
-    height: 600px;
+    height: 100%;
   }
   .featuresImage {
     width: 99% !important;
@@ -220,23 +299,88 @@ h2 {
   .carddescription {
     font-size: 20px;
   }
+  .singlePrice {
+    text-align: center;
+    font-size: 36px;
+  }
+  .singleRating {
+    text-align: center;
+    font-size: 36px;
+  }
   .AllImageForTeacher {
-    width: 50vw;
-    margin-left: 200px;
+    width: 100%;
+    height: 400px;
+  }
+  .nameOfType {
+    text-align: center;
+    font-size: 36px;
   }
   .Bestseller {
-    margin-left: 300px;
+    margin-left: 260px;
     text-align: center;
     width: 200px;
   }
   .AddToCartButton {
     text-align: center;
     width: 130px;
+    margin-top: 200px;
   }
 }
 
-@media screen and (min-width: 110px) and (max-width: 1400px) {
+@media screen and (min-width: 1020px) and (max-width: 1400px) {
   .Instructor {
-    gap: 40px;
+    flex-wrap: nowrap;
+    gap: 10px;
+  }
+  .nameofType {
+    text-align: center;
+    font-size: 30px;
+  }
+  .categoriesGrandChildWrap {
+    min-height: 28vh;
+  }
+  .MainContainer {
+    gap: 20px;
+    flex-direction: row;
+  }
+  .singleCard {
+    height: 100%;
+  }
+  .nameofItem {
+    font-size: 30px;
+  }
+  .Bestseller {
+    margin-left: 250px;
+  }
+  .nameofType {
+    font-size: 24px;
+  }
+  .child_container {
+    width: 600px;
+    height: 100%;
+  }
+  .nameOfDescription {
+    font-size: 24px;
+  }
+  .nameofRatingandStar {
+    font-size: 22px;
+  }
+  .Price-of-All {
+    font-size: 22px;
+  }
+  .nameofItem1 {
+    font-size: 22px;
+  }
+  .nameofDescription {
+    font-size: 22px;
+  }
+  .singleRating {
+    font-size: 22px;
+  }
+  .singlePrice {
+    font-size: 22px;
+  }
+  .populartopicname {
+    font-size: 20px;
   }
 }
