--- a/src/CssComponent/Home.css
+++ b/src/CssComponent/Home.css
@@ -143,7 +143,6 @@ body {
 }
 .ConatinerForCourse {
   width: 80%;
-  height: 65vh;
   margin-left: 10%;
   justify-content: center;
 }
@@ -156,10 +155,9 @@ body {
 .commentContainer {
   margin-top: 30px;
   width: 80%;
-  height: 65vh;
-  border: 2px solid black;
   color: #f7f9fa;
   margin-left: 10%;
+  min-height: 450px;
 }
 .comment {
   font-size: 20px;
@@ -189,7 +187,6 @@ body {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 80%;
-  height: 40vh;
   margin-left: 10%;
 }
 .learningContent {
@@ -241,7 +238,6 @@ p {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 80%;
-  height: 56vh;
   margin-left: 10%;
 }
 .LearningmainConatiner {
@@ -257,7 +253,6 @@ p {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 80%;
-  height: 75vh;
   margin-left: 10%;
 }
 .Multiplebutton {
@@ -303,7 +298,6 @@ p {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 60%;
-  height: 53vh;
   margin-left: 20%;
 }
 .ReviewImg {
@@ -336,7 +330,6 @@ p {
   margin-top: 20px;
   background-color: #f7f9fa;
   width: 100%;
-  height: 60vh;
 }
 .TeacherConatiner {
   margin-top: 20px;
@@ -350,7 +343,6 @@ p {
 .TeacherText {
   margin-top: 80px;
   width: 25vw;
-  height: 40vh;
 }
 .GetStarted {
   position: relative;
@@ -460,9 +452,6 @@ p {
     height: 130px;
     width: 100%;
   }
-  .child_container1 {
-    height: 53vh;
-  }
   .RatingofHome {
     font-size: 20px;
     text-align: center;
@@ -498,9 +487,6 @@ p {
     display: none;
     font-size: 18px;
   }
-  .companyName {
-    margin-top: 10px;
-  }
   .List {
     font-size: 14px;
   }
@@ -526,10 +512,9 @@ p {
     height: 20px;
   }
   .commentContainer {
-    margin-top: 10px;
     width: 100%;
     margin: auto;
-    height: 100%;
+    min-height: 0;
   }
   .mulipleConatiner {
     display: none;
@@ -540,6 +525,7 @@ p {
   .LearningContainer {
     height: 100%;
     margin: auto;
+    width: 100%;
   }
   .learningContent {
     flex-direction: column;
@@ -621,7 +607,7 @@ p {
     height: 50px;
   }
   .Teaching {
-    margin-left: 35px;
+    margin-left: 65px;
   }
   .instructorforTeacher {
     text-align: center;
