--- a/src/App.css
+++ b/src/App.css
@@ -79,11 +79,11 @@ body {
   height: 60px;
 }
 
-.buy button {
-  background-color: #28a745;
-  color: #fff;
-  float: right;
-  margin-top: -70px;
+.buy {
+  display: flex;
+  justify-content: center;
+  color: black;
+  font-size: 20px;
 }
 .CartConatiner1 {
   border: 2px solid black;
