--- a/src/Component/Login.css
+++ b/src/Component/Login.css
@@ -74,7 +74,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   background-color: grey;
 }
 
